Fix sidebar styles on wide displays

--- a/public/client/css/style-wide.css
+++ b/public/client/css/style-wide.css
@@ -126,6 +126,14 @@
 							}
 
 /*********************************************************************************/
+/* Sidebar                                                                       */
+/*********************************************************************************/
+
+    #sidebar {
+        width: 21em;
+    }
+
+/*********************************************************************************/
 /* Content                                                                       */
 /*********************************************************************************/
 		
